Added friendly webpage and its styling, progress/redesign of search_results and minor changes to a couple other files. Added readme and .gitignore files

--- a/views/search_results.ejs
+++ b/views/search_results.ejs
@@ -9,14 +9,90 @@
 </head>
 <body>
 
-    <center>
-    <h2>Showing results for search: <%= keyWord || 'Key Word Error' %> </h2>
+    <div class="header-div">
+        <h2 class="result-header">Showing results for search: <%= keyWord || 'Key Word Error' %> </h2>
+    </div>
 
-    <img src="/media/elmo_chair.png" alt="Missing Image">
-    <img src="/media/fancy_chair.png" alt="Missing Image">
-    <img src="/media/hulk_chair.png" alt="Missing Image">
-    <img src="/media/SpongeChair.png" alt="Missing Image">
-    </center>
+    <div class="result-grid">
+
+        <div class="result-unit">
+    
+            <label class="result-label" for="elmo_chair">Elmo Chair</label>
+
+            <img id="elmo_chair" src="/media/elmo_chair.png" alt="Missing Image">
+
+        </div>
+
+        <div class="result-unit">
+
+            <label class="result-label" for="fancy_chair">Fancy Chair</label>
+
+            <img id="fancy_chair" src="/media/fancy_chair.png" alt="Missing Image">
+
+        </div>
+
+        <div class="result-unit">
+
+            <label class="result-label" for="hulk_chair">Hulk Chair</label>
+
+            <img id="hulk_chair" src="/media/hulk_chair.png" alt="Missing Image">
+
+        </div>
+
+        <div class="result-unit">
+
+            <label class="result-label" for="sponge_chair">Sponge Chair</label>
+            
+            <img id="sponge_chair" src="/media/SpongeChair.png" alt="Missing Image">
+
+        </div>
+
+        <div class="result-unit">
+    
+            <label class="result-label" for="elmo_chair">Elmo Chair</label>
+
+            <img id="elmo_chair" src="/media/elmo_chair.png" alt="Missing Image">
+
+        </div>
+
+        <div class="result-unit">
+
+            <label class="result-label" for="fancy_chair">Fancy Chair</label>
+
+            <img id="fancy_chair" src="/media/fancy_chair.png" alt="Missing Image">
+
+        </div>
+
+        <div class="result-unit">
+
+            <label class="result-label" for="hulk_chair">Hulk Chair</label>
+
+            <img id="hulk_chair" src="/media/hulk_chair.png" alt="Missing Image">
+
+        </div>
+
+        <div class="result-unit">
+
+            <label class="result-label" for="sponge_chair">Sponge Chair</label>
+            
+            <img id="sponge_chair" src="/media/SpongeChair.png" alt="Missing Image">
+
+        </div>
+
+
+    </div>
+
+    <div class="bottom-bar">
+        <div>
+            about
+        </div>
+        <div>
+            directory
+        </div>
+        <div>
+            contact
+        </div>
+    </div>
 
 </body>
 </html>
