--- a/public/search_results_style.css
+++ b/public/search_results_style.css
@@ -3,8 +3,46 @@ body {
 }
 
 img {
-    width: 240px;  
-    height: 240px;  
-    margin-right: 50px;
-    margin-top: 250px;
+    width: 100%;  
+    height: 240px; 
+}
+
+.result-header {
+    margin-left: 37%;
+    font-size: 35px;
+    color: whitesmoke;
+    margin-bottom: 55px;
+}
+
+.division {
+    border: 2px;
+}
+
+.result-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin-left: 210px;
+}
+
+.result-unit {
+    border-style: solid;
+    border-color: pink;
+    background-color: rgb(243, 118, 118);
+    width: 240px;
+    margin-bottom: 30px;
+}
+
+.result-label {
+    display: block;
+    margin-left: 12%;
+    margin-bottom: 8px;
+    font-size: 22px;
+    color: blanchedalmond;
+}
+
+.bottom-bar {
+    margin-top: 260px;
+    display: flex;
+    justify-content: space-around;
+    background-color: violet;
 }
