--- a/views/search_results.ejs
+++ b/views/search_results.ejs
@@ -49,33 +49,33 @@
 
         <div class="result-unit">
     
-            <label class="result-label" for="elmo_chair">Elmo Chair</label>
+            <label class="result-label" for="swaggy_chair">Swaggy Chair</label>
 
-            <img id="elmo_chair" src="/media/elmo_chair.png" alt="Missing Image">
-
-        </div>
-
-        <div class="result-unit">
-
-            <label class="result-label" for="fancy_chair">Fancy Chair</label>
-
-            <img id="fancy_chair" src="/media/fancy_chair.png" alt="Missing Image">
+            <img id="swaggy_chair" src="/media/swaggy_chair.png" alt="Missing Image">
 
         </div>
 
         <div class="result-unit">
 
-            <label class="result-label" for="hulk_chair">Hulk Chair</label>
+            <label class="result-label" for="casual_chair">Casual Chair</label>
 
-            <img id="hulk_chair" src="/media/hulk_chair.png" alt="Missing Image">
+            <img id="casual_chair" src="/media/casual_chair.png" alt="Missing Image">
 
         </div>
 
         <div class="result-unit">
 
-            <label class="result-label" for="sponge_chair">Sponge Chair</label>
+            <label class="result-label" for="discount_chair">Discount Chair</label>
+
+            <img id="discount_chair" src="/media/discount_chair.png" alt="Missing Image">
+
+        </div>
+
+        <div class="result-unit">
+
+            <label class="result-label" for="sponge_chair">Chav Chair</label>
             
-            <img id="sponge_chair" src="/media/SpongeChair.png" alt="Missing Image">
+            <img id="chav_chair" src="/media/chav_chair.png" alt="Missing Image">
 
         </div>
 
