--- a/views/main_page.ejs
+++ b/views/main_page.ejs
@@ -14,23 +14,35 @@
     <title>My First Webpage That Includes Dynamic Javascript Elements</title>
 </head>
 <body>
+    
+    <div class="header-div">
+        <h2>
+            Chair.
+        </h2>
+    </div>
+    
+    <p class="construction-message">Page under construction</p>
+
+    <!-- Code block to send input information over to a javascript file-->
+    <form class="search-structure" action="/chairs" method="POST">
+        
+        <div class="search-bar-div">
+            <label class="search-bar">
+                Search<input type="text" name="searchQuery" value="<%= locals.searchQuery %>" />
+            </label>
+        </div>
+        
+        <button class="sponge-button">
+            <img class="sponge" src="/media/SpongeChair.png" alt="Display Error">
+        </button>
+
+    </form>
 
 <center>
-    <h2>Welcome to the main site page, I guess</h2>
-
-    <p class="first-paragraph">This is still under construction, it's not much but it's something. </p>
-
-    <form action="/chairs" method="POST">
-    <div class="search-bar-div">
-    <label class="search-bar">Search<input type="text" name="searchQuery" value="<%= locals.searchQuery %>" /></label>
-    </div>
-
-    <button class="sponge-button"><img class="sponge" src="/media/SpongeChair.png" alt="Display Error"></button>
-    </form>
 
     <!-- The weird syntax below is how to get javascript running into this file from elsewhere. All except last are vars from the server.js render statement -->
     <!-- The double bars indicate a default value to be used if the variable searched for is undefined in the javascript file. Very useful, don't forget -->
-    <p class="second-paragraph">Result of js variable multiplication is: <%= locals.number * locals.number || 2 %> <br> 
+    <p class="js-variables">Result of js variable multiplication is: <%= locals.number * locals.number || 2 %> <br> 
         <%= locals.message || 'Hiiiiiiiiiiiiii there' %> <br> <%= locals.bird || 'Robin' %></p>
 </center>
 
