Lots of progress, adding some rendering that uses form data, more javascript interaction, and some slight changes/upgrading in the styling on a couple of pages

--- a/public/friendly_style.css
+++ b/public/friendly_style.css
@@ -46,3 +46,8 @@ body {
     box-shadow: 10px;
     border-style: none;
 }
+
+.button-a:focus {
+    background-color: rgb(59, 59, 231);
+    color: chartreuse;
+}
