--- a/views/search_results.ejs
+++ b/views/search_results.ejs
@@ -17,7 +17,7 @@
 
         <div class="result-unit">
     
-            <label class="result-label" for="elmo_chair">Elmo Chair</label>
+            <label class="result-label" for="elmo_chair">Elmo Chair: $<%= (Math.random()*1000).toFixed(2) %></label>
 
             <img id="elmo_chair" src="/media/elmo_chair.png" alt="Missing Image">
 
@@ -25,7 +25,7 @@
 
         <div class="result-unit">
 
-            <label class="result-label" for="fancy_chair">Fancy Chair</label>
+            <label class="result-label" for="fancy_chair">Fancy Chair: $<%= (Math.random()*1000).toFixed(2) %></label>
 
             <img id="fancy_chair" src="/media/fancy_chair.png" alt="Missing Image">
 
@@ -33,7 +33,7 @@
 
         <div class="result-unit">
 
-            <label class="result-label" for="hulk_chair">Hulk Chair</label>
+            <label class="result-label" for="hulk_chair">Hulk Chair: $<%= (Math.random()*1000).toFixed(2) %></label>
 
             <img id="hulk_chair" src="/media/hulk_chair.png" alt="Missing Image">
 
@@ -41,7 +41,7 @@
 
         <div class="result-unit">
 
-            <label class="result-label" for="sponge_chair">Sponge Chair</label>
+            <label class="result-label" for="sponge_chair">Sponge Chair: $<%= (Math.random()*1000).toFixed(2) %></label>
             
             <img id="sponge_chair" src="/media/SpongeChair.png" alt="Missing Image">
 
@@ -49,7 +49,7 @@
 
         <div class="result-unit">
     
-            <label class="result-label" for="swaggy_chair">Swaggy Chair</label>
+            <label class="result-label" for="swaggy_chair">Swaggy Chair: $<%= (Math.random()*1000).toFixed(2) %></label>
 
             <img id="swaggy_chair" src="/media/swaggy_chair.png" alt="Missing Image">
 
@@ -57,7 +57,7 @@
 
         <div class="result-unit">
 
-            <label class="result-label" for="casual_chair">Casual Chair</label>
+            <label class="result-label" for="casual_chair">Casual Chair: $<%= (Math.random()*1000).toFixed(2) %></label>
 
             <img id="casual_chair" src="/media/casual_chair.png" alt="Missing Image">
 
@@ -65,7 +65,7 @@
 
         <div class="result-unit">
 
-            <label class="result-label" for="discount_chair">Discount Chair</label>
+            <label class="result-label" for="discount_chair">Discount Chair: $<%= (Math.random()*1000).toFixed(2) %></label>
 
             <img id="discount_chair" src="/media/discount_chair.png" alt="Missing Image">
 
@@ -73,7 +73,7 @@
 
         <div class="result-unit">
 
-            <label class="result-label" for="sponge_chair">Chav Chair</label>
+            <label class="result-label" for="sponge_chair">Chav Chair: $<%= (Math.random()*1000).toFixed(2) %></label>
             
             <img id="chav_chair" src="/media/chav_chair.png" alt="Missing Image">
 
