--- a/views/user_form.ejs
+++ b/views/user_form.ejs
@@ -24,6 +24,8 @@
             <input class="input-box" type="text" placeholder=<%= locals.prenom || "jimbo" %>  id="fname" name="firstName" value="<%= locals.firstName %>"><br><br>
             <label class="input-label" for="lname">Last name:</label>
             <input class="input-box" type="text" placeholder=<%= locals.nom || "neutron" %> id="lname" name="lastName" value="<%= locals.lastName %>"><br><br>
+            <label class="input-label" id="date-label" for="userBirth">Birthdate:</label>
+            <input class="date-picker" type="date" id="userBirth" name="userBirth" value="<%= locals.userBirth %>"><br><br>
             <input class="input-button" type="submit" value="Submit">
         </form>
     </div>
