Made the directory drop-down menu functional. Minor aesthetic changes

--- a/views/directory.ejs
+++ b/views/directory.ejs
@@ -10,11 +10,12 @@
 </head>
 <body>
     <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
+        <button class="dropbtn">Directory Menu</button>
         <div class="dropdown-content">
-          <a href="/views/user_form.ejs">Link 1</a>
-          <a href="/public/static_page.html">Link 2</a>
-          <a href="public/media/elmo_chair.png">Link 3</a>
+          <!--For links: Use their WEBSITE extensions, NOT their file directory extensions -->
+          <a href="/form">Form Page</a>
+          <a href="static_page.html">Static HTML page</a>
+          <a href="/chairs/catalog">Store results page</a>
         </div>
       </div>
 </body>
