--- a/public/directory_style.css
+++ b/public/directory_style.css
@@ -1,22 +1,27 @@
 body {
-  background-color: rgb(182, 179, 179);
+  background-color: rgb(172, 68, 155);
 }
 
-/* Dropdown Button */
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-  }
-  
+p {
+  color: white;
+}
+
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
     position: relative;
     display: inline-block;
   }
   
+
+/* Dropdown Button */
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 22px;
+    font-size: 22px;
+    border: none;
+  }
+
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
