--- a/public/form_style.css
+++ b/public/form_style.css
@@ -13,7 +13,7 @@ body {
 
 .form-section {
     margin-top: 60px;
-    background-color: aqua;
+    background-color: rgb(11, 68, 68);
     display: flex;
     justify-content: center;
     padding: 10px;
