--- a/public/styles/nhl_query_style.css
+++ b/public/styles/nhl_query_style.css
@@ -11,12 +11,16 @@ body {
     font-size: 40px;
 }
 
+.player-image {
+    height: 600px;
+}
+
 .form-section {
     margin-top: 60px;
-    background-color: rgb(11, 68, 68);
+    background-color: rgb(38, 129, 129);
     display: flex;
     justify-content: center;
-    padding: 10px;
+    padding: 30px;
 }
 
 .input-label {
