--- a/views/hockey_data.ejs
+++ b/views/hockey_data.ejs
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NHL API Results</title>
+    <link rel="stylesheet" href="/styles/player_data.css">
 </head>
 <body>
-    <h1>The API returned the following data</h1>
-    <p><%= locals.dataResults %></p>
+    <h1>The API returned the following data (<%= locals.resultsLength | 1 %>)</h1>
+    <pre class="result-text"><%= locals.dataResults %></pre>
 </body>
 </html>
