Added a bottom bar to index.html with links
Links to frame.html, links to this project's github repo. Includes
lots of styling from index_style.css. The CSS page is a bit of a
disorganized mess after that, but I'm happy with how things look for
now

--- a/public/styles/index_style.css
+++ b/public/styles/index_style.css
@@ -12,3 +12,31 @@ h1 {
 h3 {
     font-size: 30px;
 }
+
+.bottom-bar {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    color: white;
+    font-size: 25px;
+    background-color: black;
+    margin-top: 600px;
+}
+
+.github-logo {
+    width: 60px;
+}
+
+#github-button {
+    background-color: rgb(207, 181, 185);
+}
+
+#frame-link {
+    text-decoration: none;
+    color: green;
+}
+
+#about-link {
+    cursor: help;
+    text-decoration: none;
+    color: rgb(106, 106, 201);
+}
