--- a/public/styles/table_style.css
+++ b/public/styles/table_style.css
@@ -9,10 +9,12 @@ body {
 }
 
 #main_table {
+    margin-top: 50px;
     margin-left: auto;
     margin-right: auto;
     background-color: rgb(180, 159, 159);
     border-color: white;
+    border-width: 10px;
 }
 
 .table-column {
