Refined table injection example
Added the id number button implementation to table creation. Added
an injection of the table_style.css file itself into the head through
the same javascript file. Created a blank template file to test the
stylesheet injection with. Added that template file to the data route.

--- a/public/styles/table_style.css
+++ b/public/styles/table_style.css
@@ -6,6 +6,11 @@ body {
 #page-header {
     font-size: 90px;
     text-align: center;
+    transition: color 1.5s;
+}
+
+#page-header:hover {
+    color: white;
 }
 
 #main_table {
